--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,7 +27,8 @@ android {
         applicationId = "com.example.chat_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+        // minSdk = flutter.minSdkVersion
+        minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
@@ -38,6 +39,12 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+        }
+    }
+   
+    packagingOptions {
+        jniLibs {
+            useLegacyPackaging = true
         }
     }
 }
