--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^6.0.1
   firebase_storage: ^13.0.0
   image_picker: ^1.2.0
+  firebase_app_check: ^0.4.0
+  cloud_firestore: ^6.0.0
 
 dev_dependencies:
   flutter_test:
