--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.2.0
   firebase_app_check: ^0.4.0
   cloud_firestore: ^6.0.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
